force-app/main/default/objects/PROJECT__c/PROJECT__c.object-meta.xml
<CustomObject>
    <label>Project</label>
    <nameField>
        <displayFormat>PJ-{000000}</displayFormat>
        <label>PROJECT ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>