force-app/main/default/objects/PROJECT__c/fields/ActualEndDate__c.field-meta.xml
<CustomField>
    <fullName>ActualEndDate__c</fullName>
    <label>ACTUAL END DATE</label>
    <type>Date</type>
</CustomField>