force-app/main/default/objects/PROJECT__c/fields/BudgetRemained__c.field-meta.xml
<CustomField>
    <fullName>BudgetRemained__c</fullName>
    <label>BUDGET REMAIN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>