force-app/main/default/objects/PROJECT__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CUSTOMER</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PROJECT</relationshipLabel>
    <relationshipName>Project</relationshipName>
    <type>Lookup</type>
</CustomField>