force-app/main/default/objects/PROJECT__c/fields/ExpenseSpent__c.field-meta.xml
<CustomField>
    <fullName>ExpenseSpent__c</fullName>
    <label>EXPENSE SPENT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>