force-app/main/default/objects/PROJECT__c/fields/ParentProjectID__c.field-meta.xml
<CustomField>
    <fullName>ParentProjectID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PARENT PROJECT ID</label>
    <referenceTo>PROJECT__c</referenceTo>
    <relationshipLabel>CHILD PROJECT</relationshipLabel>
    <relationshipName>Project</relationshipName>
    <type>Lookup</type>
</CustomField>