force-app/main/default/objects/PROJECT__c/fields/PercentageOfProgress__c.field-meta.xml
<CustomField>
    <fullName>PercentageOfProgress__c</fullName>
    <label>PERCENTAGE OF PROGRESS%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>