force-app/main/default/objects/PROJECT__c/fields/ProjectBudget__c.field-meta.xml
<CustomField>
    <fullName>ProjectBudget__c</fullName>
    <label>PROJECT BUDGET</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>