force-app/main/default/objects/PROJECT__c/fields/ProjectDetail__c.field-meta.xml
<CustomField>
    <fullName>ProjectDetail__c</fullName>
    <label>PROJECT DETAIL</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>