force-app/main/default/objects/PROJECT__c/fields/ProjectEndDate__c.field-meta.xml
<CustomField>
    <fullName>ProjectEndDate__c</fullName>
    <label>PROJECT END DATE</label>
    <type>Date</type>
</CustomField>