force-app/main/default/objects/PROJECT__c/fields/ProjectScope__c.field-meta.xml
<CustomField>
    <fullName>ProjectScope__c</fullName>
    <label>PROJECT SCOPE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>