force-app/main/default/objects/PROJECT__c/fields/RequiredResource__c.field-meta.xml
<CustomField>
    <fullName>RequiredResource__c</fullName>
    <label>REQUIRED RESOURCE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>