force-app/main/default/objects/PROJECT__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProjectName__c</columns>
    <columns>ProjectStatus__c</columns>
    <columns>ProjectManager__c</columns>
    <columns>Customer__c</columns>
    <columns>ProjectStartDate__c</columns>
    <columns>ProjectEndDate__c</columns>
    <columns>ProjectBudget__c</columns>
    <columns>ExpenseSpent__c</columns>
    <columns>BudgetRemained__c</columns>
    <columns>ContractID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>